5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1592_2043.log
== TEST (2019-04-01 00:55:45) 
-- CODE:
x= float(input())
y= float(input())
b= float(input())
v= float(input())
r= float(x*1)
p= float(y*2)
o= float(b*3)
l= float(v*4)
var1= (r+p+o+l)
g= var/4
print(round(g, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g= var/4
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:55:49) 
-- CODE:
x= float(input())
y= float(input())
b= float(input())
v= float(input())
r= float(x*1)
p= float(y*2)
o= float(b*3)
l= float(v*4)
var1= (r+p+o+l)
g= var/4
print(round(g, 2))

-- EXECUTION TIME:
0.123683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2043/main.py", line 10, in <module>
    g= var/4
NameError: name 'var' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:56:50) 
-- CODE:
x= float(input(7))
y= float(input(8))
b= float(input(9))
v= float(input(6))
r= float(x*1)
p= float(y*2)
o= float(b*3)
l= float(v*4)
var1= (r+p+o+l)
g= var/4
print(round(g, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    g= var/4
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:53:54) 
-- CODE:
var= float(input())
var1= float(input())
var2= float(input())
var3= float(input())
x= ((var * 1) + (var * 2) + (var * 3) + (var * 4))/10
print(round(x,2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:54:18) 
-- CODE:
var= float(input())
var1= float(input())
var2= float(input())
var3= float(input())
x= ((var * 1) + (var * 2) + (var * 3) + (var * 4))/10
print(round(x,2))

-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:55:05) 
-- CODE:
var= float(input())
var1= float(input())
var2= float(input())
var3= float(input())
x= ((var * 1) + (var1 * 2) + (var2 * 3) + (var3 * 4))/10
print(round(x,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:07:48) 
-- CODE:
var= float(input())
var1= float(input())
var2= float(input())
var3= float(input())
x= ((var * 1) + (var1 * 2) + (var2 * 3) + (var3 * 4))/(1+2+3+4)
print(round(x,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:07:55) 
-- CODE:
var= float(input())
var1= float(input())
var2= float(input())
var3= float(input())
x= ((var * 1) + (var1 * 2) + (var2 * 3) + (var3 * 4))/(1+2+3+4)
print(round(x,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:08:14) 
-- CODE:
var= float(input())
var1= float(input())
var2= float(input())
var3= float(input())
x= ((var * 1) + (var1 * 2) + (var2 * 3) + (var3 * 4))/(1+2+3+4)
print(round(x,2))

-- EXECUTION TIME:
0.171037
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
